# ldrd_compressions

./: .gitignore  README.md  dunerootfile.ipynb  plot2D.ipynb  waveforms.py  write_hdf5data.py  write_ttree.py  write_waveforms.py
anatools/: analyze_compressed_hist.ipynb  analyze_rntuple.ipynb  check_systematics.ipynb  plot2D.ipynb
tests/: CMakeLists.txt  compress_channels_SZ3.cxx  compress_channels_SZ3_2D.cxx  decompress_sz3_test.cxx  mytest.cxx  mytest_MGARD.cxx  mytest_MGARDGeneral.cxx  mytest_SZ3.cxx  mytest_idealem.cxx  mytest_idealem_RNTUPLE.cxx  mytest_idealem_gen.cxx  mytest_json.cxx
tests/compression_interface/: CompressionTools.hxx  IDEALEMCompressionTools.hxx  MGARDCompressionTools.hxx  README.md  SZ3CompressionTools.hxx  Utilities.hxx  WriteCompressedData.h  WriteConfigParameters.h
